fix: use tons of fucky reflection to allow 1.20.5+ properties wihtout core needing 1.20.6 api